--omnetpp-2.0 released-- line added to ChangeLog by omnetpp/_tag

--- a/samples/dyna/ChangeLog
+++ b/samples/dyna/ChangeLog
@@ -5,3 +5,4 @@ Jan 18, 2000
 ------ omnetpp-2.0b3 released ------
 ------ omnetpp-2.0b4 released ------
 ------ omnetpp-2.0b5 released ------
+------ omnetpp-2.0 released ------
