--- a/samples/fddi/ChangeLog
+++ b/samples/fddi/ChangeLog
@@ -210,3 +210,4 @@ Jun 2, 2000
 ------ omnetpp-2.0b5 released ------
 Jul 1, 2000
  - calls to obsolete cQueue functions upgraded to new functions (insert(),pop())
+------ omnetpp-2.0 released ------
