--- a/src/envir/ChangeLog
+++ b/src/envir/ChangeLog
@@ -256,4 +256,5 @@ June 19, 2000
 Jan 16, 2001
  - added Speedometer class
 Feb 6, 2001
- - added dllexport to Speedometer 
+ - added dllexport to Speedometer
+------ omnetpp-2.0 released ------
