--- a/src/plove-old/ChangeLog
+++ b/src/plove-old/ChangeLog
@@ -62,3 +62,4 @@ Aug 26, 2000
 Aug 29, 2000
  - Makefile.vc modified: generated plove.bat now passes command-line parameters
    to Plove
+------ omnetpp-2.0 released ------
