--- a/src/sim/ChangeLog
+++ b/src/sim/ChangeLog
@@ -938,3 +938,4 @@ Feb 5, 2001
  - old BC3.1 support removed from cenvir.h
 Feb 6, 2001
  - fix: Makefile.vc: 'clean' target didn't delete object files in std/ and pvm/
+------ omnetpp-2.0 released ------
