--- a/samples/hist/ChangeLog
+++ b/samples/hist/ChangeLog
@@ -6,3 +6,4 @@ May 21, 2000
  - inspect.lst fixed (see Tkenv's Options|Load inspector list menu item)
 ------ omnetpp-2.0b4 released ------
 ------ omnetpp-2.0b5 released ------
+------ omnetpp-2.0 released ------
