--- a/samples/nim/ChangeLog
+++ b/samples/nim/ChangeLog
@@ -3,3 +3,4 @@ Oct 10, 1999
 ------ omnetpp-2.0b3 released ------
 ------ omnetpp-2.0b4 released ------
 ------ omnetpp-2.0b5 released ------
+------ omnetpp-2.0 released ------
