--- a/src/nedc/ChangeLog
+++ b/src/nedc/ChangeLog
@@ -280,3 +280,4 @@ Jan 16, 2001
  - disabled heapcheck in jar_mem.c (this makes nedc a lot faster if compiled with
    Borland C++)
  - added version mismatch check to generated _n.cc files
+------ omnetpp-2.0 released ------
