--- a/src/tkenv/ChangeLog
+++ b/src/tkenv/ChangeLog
@@ -414,4 +414,5 @@ Jan 21, 2001
      F4 Step, F5 Run, F6 Fast Run, F7 Express Run, F8 Stop, Ctrl-F4 Step within
      module
 Feb 6, 2001
- - make clean didn't delete tclcode.cc        
+ - make clean didn't delete tclcode.cc
+------ omnetpp-2.0 released ------
