*** empty log message ***

--- a/samples/token/ChangeLog
+++ b/samples/token/ChangeLog
@@ -6,3 +6,4 @@ Oct 10, 1999
 Jun 6, 2000
  - [General]/total-stack-kb= increased to 4Mb
 ------ omnetpp-2.0 released ------
+------ omnetpp-2.0p1 released ------
