--- a/src/cmdenv/ChangeLog
+++ b/src/cmdenv/ChangeLog
@@ -136,3 +136,4 @@ June 6, 2000
    exceptions at all.)
 HEAP.CC TO BE TESTED!!!
 ------ omnetpp-2.0 released ------
+------ omnetpp-2.0p1 released ------
