--- a/src/envir/ChangeLog
+++ b/src/envir/ChangeLog
@@ -260,3 +260,4 @@ Feb 6, 2001
 ------ omnetpp-2.0 released ------
 Feb 27, 2001
  - patch to prevent Unix linkers (falsely) report Speedometer as missing symbol
+------ omnetpp-2.0p1 released ------
