--- a/src/plove-old/ChangeLog
+++ b/src/plove-old/ChangeLog
@@ -63,3 +63,4 @@ Aug 29, 2000
  - Makefile.vc modified: generated plove.bat now passes command-line parameters
    to Plove
 ------ omnetpp-2.0 released ------
+------ omnetpp-2.0p1 released ------
