--- a/src/sim/ChangeLog
+++ b/src/sim/ChangeLog
@@ -941,3 +941,4 @@ Feb 6, 2001
 ------ omnetpp-2.0 released ------
 Feb 27, 2001
  - fixed bug which prevented compiling with PVM
+------ omnetpp-2.0p1 released ------
