--- a/src/tkenv/ChangeLog
+++ b/src/tkenv/ChangeLog
@@ -416,3 +416,4 @@ Jan 21, 2001
 Feb 6, 2001
  - make clean didn't delete tclcode.cc
 ------ omnetpp-2.0 released ------
+------ omnetpp-2.0p1 released ------
