--- a/samples/fddi/ChangeLog
+++ b/samples/fddi/ChangeLog
@@ -211,3 +211,4 @@ Jun 2, 2000
 Jul 1, 2000
  - calls to obsolete cQueue functions upgraded to new functions (insert(),pop())
 ------ omnetpp-2.0 released ------
+------ omnetpp-2.0p1 released ------
