--- a/samples/fifo2/ChangeLog
+++ b/samples/fifo2/ChangeLog
@@ -15,3 +15,4 @@ Jan 18, 2000
 Jul 1, 2000
  - calls to obsolete cQueue functions upgraded to new functions (insert(),pop())
 ------ omnetpp-2.0 released ------
+------ omnetpp-2.0p1 released ------
