--- a/samples/hcube/ChangeLog
+++ b/samples/hcube/ChangeLog
@@ -7,3 +7,4 @@ Jan 18, 2000
 ------ omnetpp-2.0b4 released ------
 ------ omnetpp-2.0b5 released ------
 ------ omnetpp-2.0 released ------
+------ omnetpp-2.0p1 released ------
