--- a/samples/hist/ChangeLog
+++ b/samples/hist/ChangeLog
@@ -7,3 +7,4 @@ May 21, 2000
 ------ omnetpp-2.0b4 released ------
 ------ omnetpp-2.0b5 released ------
 ------ omnetpp-2.0 released ------
+------ omnetpp-2.0p1 released ------
