--- a/src/gned/ChangeLog
+++ b/src/gned/ChangeLog
@@ -274,3 +274,4 @@ Feb 13, 2001
    app window after closing the color selection dialog
  - fixed handling of comments in all "Properties" dialogs (messed up newlines)
 ------ omnetpp-2.0 released ------
+------ omnetpp-2.0p1 released ------
