--- a/src/nedc/ChangeLog
+++ b/src/nedc/ChangeLog
@@ -281,3 +281,4 @@ Jan 16, 2001
    Borland C++)
  - added version mismatch check to generated _n.cc files
 ------ omnetpp-2.0 released ------
+------ omnetpp-2.0p1 released ------
