--- a/src/cmdenv/ChangeLog
+++ b/src/cmdenv/ChangeLog
@@ -137,3 +137,8 @@ June 6, 2000
 HEAP.CC TO BE TESTED!!!
 ------ omnetpp-2.0 released ------
 ------ omnetpp-2.0p1 released ------
+ - Borland C++ support removed: I deleted the project files (*.ide). I added
+   equivalent Makefile.bc files (generated from the BC IDE), but they are
+   completely unsupported at the moment. If there's interest, it's possible
+   that later I'll add makefiles for the free command-line bc5.5 compiler.
+
