--- a/src/gned/ChangeLog
+++ b/src/gned/ChangeLog
@@ -275,3 +275,8 @@ Feb 13, 2001
  - fixed handling of comments in all "Properties" dialogs (messed up newlines)
 ------ omnetpp-2.0 released ------
 ------ omnetpp-2.0p1 released ------
+ - Borland C++ support removed: I deleted the project files (*.ide). I added
+   equivalent Makefile.bc files (generated from the BC IDE), but they are
+   completely unsupported at the moment. If there's interest, it's possible
+   that later I'll add makefiles for the free command-line bc5.5 compiler.
+
