--- a/samples/nim/ChangeLog
+++ b/samples/nim/ChangeLog
@@ -5,3 +5,4 @@ Oct 10, 1999
 ------ omnetpp-2.0b5 released ------
 ------ omnetpp-2.0 released ------
 ------ omnetpp-2.0p1 released ------
+ - Borland C++ project file (*.ide) removed, Makefile.bc added (unsupported!)
