--- a/samples/token/ChangeLog
+++ b/samples/token/ChangeLog
@@ -7,3 +7,5 @@ Jun 6, 2000
  - [General]/total-stack-kb= increased to 4Mb
 ------ omnetpp-2.0 released ------
 ------ omnetpp-2.0p1 released ------
+ - Borland C++ project file (*.ide) removed, Makefile.bc added (unsupported!)
+
