--- a/samples/fddi/ChangeLog
+++ b/samples/fddi/ChangeLog
@@ -212,4 +212,10 @@ Jul 1, 2000
  - calls to obsolete cQueue functions upgraded to new functions (insert(),pop())
 ------ omnetpp-2.0 released ------
 ------ omnetpp-2.0p1 released ------
+Mar 10, 2001
  - Borland C++ project file (*.ide) removed, Makefile.bc added (unsupported!)
+ - MSVC makefiles and project files now contain the OMNeT++ include and lib
+   directories with absolute paths (previously they were relative paths,
+   like ..\..\lib). This means the samples will compile even when they're moved
+   to another location in the file system.
+
