--- a/src/plove-old/ChangeLog
+++ b/src/plove-old/ChangeLog
@@ -64,3 +64,6 @@ Aug 29, 2000
    to Plove
 ------ omnetpp-2.0 released ------
 ------ omnetpp-2.0p1 released ------
+March 24, 2001
+ - prepared executable wrapper around Plove, with compiled-in Tcl code (optional)
+ TBD: Makefile.vc decently, Makefile.in!!!
