--- a/test/Readme
+++ b/test/Readme
@@ -4,11 +4,16 @@ Testing before release
 Compilation and running the test suite (TBD) and the samples on at least
 the following platforms:
 
-   - NT, Visual C++ 6.0 without PVM
+   - NT, Visual C++ 6.0
+   - NT, Visual C++ 6.0 with Tcl embedding
    - NT, Visual C++ 6.0 with PVM (compile only)
-   - NT, Cygwin 1.1
+
+   - NT, Cygwin 1.1, static libs
+   - NT, Cygwin 1.1, static libs, with Tcl embedding
+
+   - Linux, gcc, dynamic libs
 
    - Linux, gcc, static libs
-   - Linux, gcc, dynamic libs
+   - Linux, gcc, static libs, with Tcl embedding
    - Linux, gcc, static libs, with PVM (compile only)
 
