*** empty log message ***

--- a/src/utils/ChangeLog
+++ b/src/utils/ChangeLog
@@ -120,3 +120,4 @@ Feb 27, 2001
 May 27, 2001
  - Makefile change: now it copies makemake, splitvec and seedtool to bin/
    (instead of making soft links).
+ - makemake renamed to opp_makemake
