*** empty log message ***

--- a/src/plove-old/TODO
+++ b/src/plove-old/TODO
@@ -1,1 +1,4 @@
-nice icons: load, sel, repl, delete, info, options, dup, <==, ==>
+Misc:
+- with Tcl-embedding, cannot display README file
+- nice icons: load, sel, repl, delete, info, options, dup, <==, ==>
+
