--- a/src/gned/ChangeLog
+++ b/src/gned/ChangeLog
@@ -291,3 +291,4 @@ Apr 16, 2001
    dummy channel named stdout), while WinMain()'s startup sequence with main()
    would result in a working command prompt in the console window (!!!).
    Pretty weird.
+ - added gned.ico
