*** empty log message ***

--- a/src/plove-old/ChangeLog
+++ b/src/plove-old/ChangeLog
@@ -79,3 +79,4 @@ Apr 16, 2001
    would result in a working command prompt in the console window (!!!).
    Pretty weird.
  - added plove.ico
+ - window title
