--- a/msvc/macros/ChangeLog
+++ b/msvc/macros/ChangeLog
@@ -1,5 +1,4 @@
 Mar 21, 2001
- - this directory was created; the files here were previously not in the
-   distribution.
+ - added the MSVC macro file to the repository
 
 
