*** empty log message ***

--- a/msvc/wizard/ChangeLog
+++ b/msvc/wizard/ChangeLog
@@ -1,5 +1,3 @@
 Mar 21, 2001
- - this directory was created; the files here were previously not in the
-   distribution.
-
+ - added OMNeT++ wizard to the repository
 
