--- a/msvc/appwizard/readme
+++ b/msvc/appwizard/readme
@@ -1,20 +1,15 @@
+Installation:
 
-Bugs in the templates: [patched in the binary :-(]
-  handleMessage() --> handleMessage(cMessage *msg)
-  writeScalar --> recordScalar  (two places!)
+- read out the following registry key:
+  HKEY_LOCAL_MACHINE\SOFTWARE\Microsoft\VisualStudio\6.0\Setup\VsCommonDir
+  It must contain the name of the Visula Studio Common directory, e.g.:
+  "E:\Program Files\Microsoft Visual Studio\Common"
+  Let's call this $COMMON.
+- copy omnetppwizard.awx to $COMMON\msdev98\template
+- copy omnetppwizard.hlp to $COMMON\msdev98\template
 
 Todo:
 - add pictures
 - make separate src file group for ned files
 - add info: "The warning when 1st loading the project can be ignored"
-
-Installation:
-
-$COMMON={
-  [HKEY_LOCAL_MACHINE\SOFTWARE\Microsoft\VisualStudio\6.0\Setup]
-  "VsCommonDir"="E:\\Program Files\\Microsoft Visual Studio\\Common"
-}
-
-cp omnetppwizard.awx $COMMON\msdev98\template
-cp omnetppwizard.hlp $COMMON\msdev98\template
 
