*** empty log message ***

--- a/test/Readme
+++ b/test/Readme
@@ -1,13 +1,15 @@
 Testing before release
 ~~~~~~~~~~~~~~~~~~~~~~
 
-Test one at least the following platforms/configurations:
+Source distribution test platforms/configurations:
 
    - NT, Visual C++ 6.0
    - NT, Visual C++ 6.0 with USE_WINMAIN
    - NT, Visual C++ 6.0 with Tcl embedding
    - NT, Visual C++ 6.0 with Tcl embedding and USE_WINMAIN
    - NT, Visual C++ 6.0 with PVM (compile only)
+
+   - Win95/98, Visual C++ 6.0 (compile only, to test Makefile.98)
 
    - NT, Cygwin 1.1, static libs
    - NT, Cygwin 1.1, static libs, with Tcl embedding
