--- a/tutorial/doc_src/tutorial.tex
+++ b/tutorial/doc_src/tutorial.tex
@@ -163,9 +163,7 @@ everything works the way it should, a few windows should pop up.
 
 I consider it a bit too much work to type in \texttt{make} and then
 the binary  again and again. Therefore I included a very
-simple script \texttt{some} which does this for me. To be sure that I
-run a new compiled version everytime, \texttt{some} starts to remove
-the old binary.
+simple script \texttt{run} which does this for me.
 
 \subsection{Running the demo}
 \label{sec:running-simulation}
