--- a/tutorial/ChangeLog
+++ b/tutorial/ChangeLog
@@ -5,5 +5,5 @@ May 6, 2001 (AV)
  - renamed 'some' script to 'run' (also in tutorial.tex)
  - removed the 'rm queues' line from the 'run' script, and removed the
    corresponding sentence from tutorial.tex too.
- - TODO: write makefile for compiling tutorial.tex into pdf
- - added MSVC makefiles
+ - added makefile for creating pdf from the latex sources
+ - added MSVC makefile, updated unix makefile
